// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`function feedToFilters should return filters with blocked content types 1`] = `
Object {
  "blockedContentCuration": Array [
    "listicle",
  ],
  "blockedTags": Array [],
  "excludeSourceTypes": Array [],
  "excludeSources": Array [],
  "excludeTypes": Array [],
  "includeTags": Array [],
  "sourceIds": Array [],
}
`;

exports[`function feedToFilters should return filters with blocked source types 1`] = `
Object {
  "blockedContentCuration": Array [],
  "blockedTags": Array [],
  "excludeSourceTypes": Array [
    "squad",
  ],
  "excludeSources": Array [],
  "excludeTypes": Array [],
  "includeTags": Array [],
  "sourceIds": Array [],
}
`;

exports[`function feedToFilters should return filters with source memberships 1`] = `
Object {
  "blockedContentCuration": Array [],
  "blockedTags": Array [],
  "excludeSourceTypes": Array [],
  "excludeSources": Array [],
  "excludeTypes": Array [],
  "includeTags": Array [],
  "sourceIds": Array [
    "a",
    "b",
  ],
}
`;

exports[`mutation addFiltersToFeed should add the new feed settings 1`] = `
Object {
  "addFiltersToFeed": Object {
    "advancedSettings": Array [],
    "blockedTags": Array [
      "golang",
    ],
    "excludeSources": Array [
      Object {
        "id": "a",
        "image": "http://image.com/a",
        "name": "A",
        "public": true,
      },
      Object {
        "id": "b",
        "image": "http://image.com/b",
        "name": "B",
        "public": true,
      },
    ],
    "id": "1",
    "includeTags": Array [
      "javascript",
      "webdev",
    ],
    "userId": "1",
  },
}
`;

exports[`mutation addFiltersToFeed should ignore duplicates 1`] = `
Object {
  "addFiltersToFeed": Object {
    "advancedSettings": Array [
      Object {
        "enabled": true,
        "id": 1,
      },
      Object {
        "enabled": false,
        "id": 2,
      },
      Object {
        "enabled": false,
        "id": 3,
      },
      Object {
        "enabled": true,
        "id": 4,
      },
      Object {
        "enabled": true,
        "id": 7,
      },
    ],
    "blockedTags": Array [
      "golang",
    ],
    "excludeSources": Array [
      Object {
        "id": "a",
        "image": "http://image.com/a",
        "name": "A",
        "public": true,
      },
      Object {
        "id": "b",
        "image": "http://image.com/b",
        "name": "B",
        "public": true,
      },
      Object {
        "id": "c",
        "image": "http://image.com/c",
        "name": "C",
        "public": true,
      },
    ],
    "id": "1",
    "includeTags": Array [
      "html",
      "javascript",
      "webdev",
    ],
    "userId": "1",
  },
}
`;

exports[`mutation addFiltersToFeed should ignore non existing sources 1`] = `
Object {
  "addFiltersToFeed": Object {
    "advancedSettings": Array [],
    "blockedTags": Array [],
    "excludeSources": Array [
      Object {
        "id": "a",
        "image": "http://image.com/a",
        "name": "A",
        "public": true,
      },
      Object {
        "id": "b",
        "image": "http://image.com/b",
        "name": "B",
        "public": true,
      },
    ],
    "id": "1",
    "includeTags": Array [
      "javascript",
      "webdev",
    ],
    "userId": "1",
  },
}
`;

exports[`mutation removeFiltersFromFeed should remove existing filters 1`] = `
Object {
  "removeFiltersFromFeed": Object {
    "advancedSettings": Array [
      Object {
        "enabled": true,
        "id": 1,
      },
      Object {
        "enabled": false,
        "id": 2,
      },
      Object {
        "enabled": false,
        "id": 3,
      },
      Object {
        "enabled": true,
        "id": 4,
      },
      Object {
        "enabled": true,
        "id": 7,
      },
    ],
    "blockedTags": Array [],
    "excludeSources": Array [
      Object {
        "id": "c",
        "image": "http://image.com/c",
        "name": "C",
        "public": true,
      },
    ],
    "id": "1",
    "includeSources": Array [],
    "includeTags": Array [
      "html",
    ],
    "userId": "1",
  },
}
`;

exports[`mutation updateFeedAdvancedSettings should add the new feed advanced settings 1`] = `
Object {
  "updateFeedAdvancedSettings": Array [
    Object {
      "enabled": true,
      "id": 1,
    },
    Object {
      "enabled": false,
      "id": 2,
    },
  ],
}
`;

exports[`mutation updateFeedAdvancedSettings should ignore duplicates 1`] = `
Object {
  "updateFeedAdvancedSettings": Array [
    Object {
      "enabled": true,
      "id": 1,
    },
    Object {
      "enabled": false,
      "id": 2,
    },
    Object {
      "enabled": false,
      "id": 3,
    },
    Object {
      "enabled": true,
      "id": 4,
    },
    Object {
      "enabled": true,
      "id": 7,
    },
  ],
}
`;

exports[`mutation updateFeedAdvancedSettings should not fail if feed entity does not exists 1`] = `
Object {
  "updateFeedAdvancedSettings": Array [
    Object {
      "enabled": true,
      "id": 1,
    },
    Object {
      "enabled": false,
      "id": 2,
    },
  ],
}
`;

exports[`mutation updateFeedAdvancedSettings should update existing feed advanced settings 1`] = `
Object {
  "updateFeedAdvancedSettings": Array [
    Object {
      "enabled": false,
      "id": 1,
    },
    Object {
      "enabled": true,
      "id": 2,
    },
    Object {
      "enabled": true,
      "id": 3,
    },
    Object {
      "enabled": false,
      "id": 4,
    },
    Object {
      "enabled": false,
      "id": 7,
    },
  ],
}
`;

exports[`query advancedSettings should return the list of the advanced settings 1`] = `
Object {
  "advancedSettings": Array [
    Object {
      "defaultEnabledState": true,
      "description": "Description for Another Settings",
      "id": 6,
      "title": "Another Settings",
    },
    Object {
      "defaultEnabledState": true,
      "description": "Description for Code examples",
      "id": 4,
      "title": "Code examples",
    },
    Object {
      "defaultEnabledState": true,
      "description": "Description for Company blogs",
      "id": 5,
      "title": "Company blogs",
    },
    Object {
      "defaultEnabledState": true,
      "description": "Description for Non-editorial content",
      "id": 2,
      "title": "Non-editorial content",
    },
    Object {
      "defaultEnabledState": true,
      "description": "Description for Release notes",
      "id": 3,
      "title": "Release notes",
    },
    Object {
      "defaultEnabledState": true,
      "description": "Description for Another Settings",
      "id": 7,
      "title": "Setting with options",
    },
    Object {
      "defaultEnabledState": true,
      "description": "Description for Tech magazines",
      "id": 1,
      "title": "Tech magazines",
    },
  ],
}
`;

exports[`query anonymousFeed by time should return anonymous feed with no filters ordered by time 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "type": "article",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "type": "article",
          "url": "http://p3.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "type": "article",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "type": "article",
          "url": "http://p5.com",
        },
      },
    ],
    "pageInfo": Object {
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should remove banned posts from the feed 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "type": "article",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "type": "article",
          "url": "http://p3.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "type": "article",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MQ==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should remove posts with "showOnFeed" false 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "type": "article",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "type": "article",
          "url": "http://p3.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "type": "article",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MQ==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should return anonymous feed filtered by sources 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "type": "article",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "type": "article",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "type": "article",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MQ==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should return anonymous feed filtered by tags 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "type": "article",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MQ==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should return anonymous feed filtered by tags and sources 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "type": "article",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "type": "article",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MQ==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should return anonymous feed v2 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "type": "article",
          "url": "http://p4.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "b",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should return anonymous feed v2 and include blocked filters 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "type": "article",
          "url": "http://p4.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "b",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should return anonymous feed while excluding sources 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "type": "article",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "type": "article",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "type": "article",
          "url": "http://p3.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6NA==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should return anonymous feed with no filters ordered by popularity 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "type": "article",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "type": "article",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "type": "article",
          "url": "http://p3.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "type": "article",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MQ==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should return anonymous feed with no filters ordered by time 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "type": "article",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "type": "article",
          "url": "http://p3.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "type": "article",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "type": "article",
          "url": "http://p5.com",
        },
      },
    ],
    "pageInfo": Object {
      "hasNextPage": false,
    },
  },
}
`;

exports[`query anonymousFeed should safetly handle a case where the feed is empty 1`] = `
Object {
  "anonymousFeed": Object {
    "edges": Array [],
    "pageInfo": Object {
      "endCursor": null,
      "hasNextPage": false,
    },
  },
}
`;

exports[`query authorFeed should return a single author feed with scout and author setting 1`] = `
Object {
  "authorFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p3",
          "isAuthor": 0,
          "isScout": 1,
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "type": "article",
          "url": "http://p3.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "isAuthor": 1,
          "isScout": 0,
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MQ==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should remove banned posts from the feed 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MQ==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should remove deleted posts from the feed 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MQ==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should respect the supportedTypes argument 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "type": "share",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MQ==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should return feed with preconfigured filters 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "type": "article",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MQ==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should return only article posts by default 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MQ==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should return preconfigured feed with blocked tags filters only 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "type": "article",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "type": "article",
          "url": "http://p3.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "type": "article",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MQ==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should return preconfigured feed with no filters 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "type": "article",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "type": "article",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "type": "article",
          "url": "http://p3.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "type": "article",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MQ==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should return preconfigured feed with sources filtered based on advanced settings 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "type": "article",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "type": "article",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "type": "article",
          "url": "http://p3.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "type": "article",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
      Object {
        "node": Object {
          "id": "includedPost",
          "readTime": null,
          "source": Object {
            "id": "includedSource",
            "image": "http://image.com/c",
            "name": "IS",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "Included Post",
          "type": "article",
          "url": "http://ip1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MQ==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should return preconfigured feed with sources filters only 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "type": "article",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "type": "article",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "type": "article",
          "url": "http://p3.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6NA==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should return preconfigured feed with tags and blocked tags filters 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "type": "article",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "type": "article",
          "url": "http://p4.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6Mw==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should return preconfigured feed with tags filters only 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "type": "article",
          "url": "http://p5.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MTA=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed should return unread posts from preconfigured feed 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "type": "article",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "type": "article",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "type": "article",
          "url": "http://p3.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "type": "article",
          "url": "http://p4.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6Mw==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed youtube content can filter out article posts 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "yt1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [],
          "title": "youtube post",
          "type": "video:youtube",
          "url": "https://youtu.be/T_AbQGe7fuU",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MA==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed youtube content should exclude video content when it is disabled by the user 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "type": "article",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MQ==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed youtube content should include video content by default 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "type": "article",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
      Object {
        "node": Object {
          "id": "yt1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [],
          "title": "youtube post",
          "type": "video:youtube",
          "url": "https://youtu.be/T_AbQGe7fuU",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MA==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feed youtube content should include video content when it is enabled by the user 1`] = `
Object {
  "feed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "type": "article",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
      Object {
        "node": Object {
          "id": "yt1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [],
          "title": "youtube post",
          "type": "video:youtube",
          "url": "https://youtu.be/T_AbQGe7fuU",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MA==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query feedSettings should return the feed settings 1`] = `
Object {
  "feedSettings": Object {
    "advancedSettings": Array [
      Object {
        "advancedSettings": Object {
          "description": "Description for Tech magazines",
          "group": "advanced",
          "id": 1,
          "title": "Tech magazines",
        },
        "enabled": true,
        "id": 1,
      },
      Object {
        "advancedSettings": Object {
          "description": "Description for Non-editorial content",
          "group": "advanced",
          "id": 2,
          "title": "Non-editorial content",
        },
        "enabled": false,
        "id": 2,
      },
      Object {
        "advancedSettings": Object {
          "description": "Description for Release notes",
          "group": "advanced",
          "id": 3,
          "title": "Release notes",
        },
        "enabled": false,
        "id": 3,
      },
      Object {
        "advancedSettings": Object {
          "description": "Description for Code examples",
          "group": "advanced",
          "id": 4,
          "title": "Code examples",
        },
        "enabled": true,
        "id": 4,
      },
      Object {
        "advancedSettings": Object {
          "description": "Description for Another Settings",
          "group": "content_types",
          "id": 7,
          "title": "Setting with options",
        },
        "enabled": true,
        "id": 7,
      },
    ],
    "blockedTags": Array [
      "golang",
    ],
    "excludeSources": Array [
      Object {
        "id": "b",
        "image": "http://image.com/b",
        "name": "B",
        "public": true,
      },
      Object {
        "id": "c",
        "image": "http://image.com/c",
        "name": "C",
        "public": true,
      },
    ],
    "id": "1",
    "includeSources": Array [],
    "includeTags": Array [
      "html",
      "javascript",
    ],
    "userId": "1",
  },
}
`;

exports[`query keywordFeed should return a single keyword feed 1`] = `
Object {
  "keywordFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "type": "article",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "type": "article",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MQ==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query mostDiscussedFeed should not return posts from private squads 1`] = `
Object {
  "mostDiscussedFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "type": "article",
          "url": "http://p3.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query mostDiscussedFeed should not return posts from public squads 1`] = `
Object {
  "mostDiscussedFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "type": "article",
          "url": "http://p3.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query mostDiscussedFeed should return a most discussed feed 1`] = `
Object {
  "mostDiscussedFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "type": "article",
          "url": "http://p3.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query mostUpvotedFeed should not return posts from private squads 1`] = `
Object {
  "mostUpvotedFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "type": "article",
          "url": "http://p3.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query mostUpvotedFeed should not return posts from public squads 1`] = `
Object {
  "mostUpvotedFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "type": "article",
          "url": "http://p3.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query mostUpvotedFeed should return a most upvoted feed 1`] = `
Object {
  "mostUpvotedFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "type": "article",
          "url": "http://p3.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query mostUpvotedFeed should return a most upvoted feed of the month 1`] = `
Object {
  "mostUpvotedFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p2",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [],
          "title": "P2",
          "type": "article",
          "url": "http://p2.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
      Object {
        "node": Object {
          "id": "p3",
          "readTime": null,
          "source": Object {
            "id": "c",
            "image": "http://image.com/c",
            "name": "C",
            "public": true,
          },
          "tags": Array [],
          "title": "P3",
          "type": "article",
          "url": "http://p3.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjI=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query sourceFeed should display return the right posts after the first page being a mix of pinned and unpinned posts 1`] = `
Array [
  Object {
    "node": Object {
      "id": "p2",
      "pinnedAt": null,
      "readTime": null,
      "source": Object {
        "id": "b",
        "image": "http://image.com/b",
        "name": "B",
        "public": true,
      },
      "tags": Array [],
      "title": "P2",
      "type": "article",
      "url": "http://p2.com",
    },
  },
]
`;

exports[`query sourceFeed should display return the right posts after the first page being pinned posts 1`] = `
Array [
  Object {
    "node": Object {
      "id": "p5",
      "pinnedAt": null,
      "readTime": null,
      "source": Object {
        "id": "b",
        "image": "http://image.com/b",
        "name": "B",
        "public": true,
      },
      "tags": Array [
        "html",
        "javascript",
      ],
      "title": "P5",
      "type": "article",
      "url": "http://p5.com",
    },
  },
  Object {
    "node": Object {
      "id": "p2",
      "pinnedAt": null,
      "readTime": null,
      "source": Object {
        "id": "b",
        "image": "http://image.com/b",
        "name": "B",
        "public": true,
      },
      "tags": Array [],
      "title": "P2",
      "type": "article",
      "url": "http://p2.com",
    },
  },
]
`;

exports[`query tagFeed should return a single tag feed 1`] = `
Object {
  "tagFeed": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "p5",
          "readTime": null,
          "source": Object {
            "id": "b",
            "image": "http://image.com/b",
            "name": "B",
            "public": true,
          },
          "tags": Array [
            "html",
            "javascript",
          ],
          "title": "P5",
          "type": "article",
          "url": "http://p5.com",
        },
      },
      Object {
        "node": Object {
          "id": "p4",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "backend",
            "data",
            "javascript",
          ],
          "title": "P4",
          "type": "article",
          "url": "http://p4.com",
        },
      },
      Object {
        "node": Object {
          "id": "p1",
          "readTime": null,
          "source": Object {
            "id": "a",
            "image": "http://image.com/a",
            "name": "A",
            "public": true,
          },
          "tags": Array [
            "javascript",
            "webdev",
          ],
          "title": "P1",
          "type": "article",
          "url": "http://p1.com",
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "c2NvcmU6MQ==",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query tagsCategories should return a list of categories with a property of a string array as tags 1`] = `
Object {
  "tagsCategories": Array [
    Object {
      "emoji": "⚙️",
      "id": "BE",
      "tags": Array [
        "golang",
        "javascript",
      ],
      "title": "Backend",
    },
    Object {
      "emoji": "🌈",
      "id": "FE",
      "tags": Array [
        "html",
        "javascript",
      ],
      "title": "Frontend",
    },
  ],
}
`;
